feat(risk): math engine — vol/Kelly/drawdown/concentration sizing
funds/risk_engine.py derives per-sleeve USD sizes from four stacked
constraints. Off by default (engine_enabled=false in policy.risk) — when
flipped on, every policy.sleeve_targets_for() call routes through
apply_engine() which returns adjusted sizes instead of raw JSON values.
Workers are unchanged; the dispatch lives in policy.py via a lazy import.

Constraint stack (in order):
  1. Realized-vol cap — per-sleeve vol from resolved position history
     (pstdev of pnl/principal, annualized × sqrt(365)); falls back to a
     strategy-category bootstrap when <5 resolved trades:
       yield 1%, delta_neutral 3%, grid 8%, grid_stables 0.5%,
       directional/momentum 25%, binary 40%, memecoin 80%, sniper 120%.
     Each sleeve's size is capped so its contribution to fund vol stays
     ≤ target_portfolio_vol_pct / sqrt(n_sleeves_in_fund).
  2. Fractional Kelly scale — kelly_fraction (default 0.25, quarter-Kelly)
     applied as final multiplier.
  3. Drawdown halt — fund_pnl/capital ≤ -max_drawdown_halt_per_fund_pct
     zeros every sleeve in the fund. null disables the halt.
  4. Counterparty concentration — pro-rata scale-down when any
     counterparty (aave_v3, binance_spot, polymarket, etc.) exceeds
     max_concentration_per_counterparty_pct of fund capital.

CLI:
  python3 funds/risk_engine.py --show                    # current sizes
  python3 funds/risk_engine.py --show --enable-preview   # previsualize dynamic sizing
  python3 funds/risk_engine.py --enable                  # flip engine_enabled=true
  python3 funds/risk_engine.py --disable                 # flip engine_enabled=false

--show prints the full decision chain per sleeve: static, realized_vol,
vol_cap, kelly, drawdown_halt, counterparty scalar, final sized USD.

Tests: tests/test_risk_engine.py (13 unit tests, stdlib only, no pytest
required). Each test builds a synthetic policy + portfolio + summary with
unittest.mock.patch and ass